--- a/opencode/oh-my-opencode.jsonc
+++ b/opencode/oh-my-opencode.jsonc
@@ -1,267 +1,243 @@
 {
   "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
 
-  // Disable lists (empty means fully enabled)
-  "disabled_mcps": [],
-  "disabled_agents": [],
-  "disabled_skills": [],
-  "disabled_hooks": [],
-  "disabled_commands": [],
-
+  // --------------------------------------------------------------------------------------
+  // НАСТРОЙКИ АГЕНТОВ (AGENTS)
+  // Переопределение моделей, температур и прав доступа для встроенных агентов.
+  // --------------------------------------------------------------------------------------
   "agents": {
-    // Main orchestrator (primary agent)
+    // Sisyphus: Главный оркестратор.
+    // Рекомендуется: claude-opus-4-5 (лучший), gpt-5.2 (альтернатива)
     "Sisyphus": {
       "model": "openai/gpt-5.2",
-      "description": "Sisyphus - Powerful AI orchestrator from OhMyOpenCode. Plans obsessively with todos, assesses search complexity before exploration, delegates strategically to specialized agents. Uses explore for internal code (parallel-friendly), librarian only for external docs, and always delegates UI work to frontend engineer.",
-      "mode": "primary",
-      "color": "#00CED1",
-      "tools": {
-        "call_omo_agent": false,
-      },
-      // "temperature": 0.2,
-      // "top_p": 1,
-      // "prompt": "<built-in Sisyphus prompt>",
-      // "prompt_append": "<extra instructions>",
-      // "permission": { "edit": "ask", "bash": "ask", "webfetch": "ask" }
-    },
-
-    // Master orchestrator for TODO-list execution
-    "orchestrator-sisyphus": {
-      "model": "openai/gpt-5.2",
-      "description": "Orchestrates work via sisyphus_task() to complete ALL tasks in a todo list until fully done",
-      "mode": "primary",
       "temperature": 0.1,
-      "color": "#10B981",
-      "tools": {
-        "task": false,
-        "call_omo_agent": false,
-      },
+      "description": "Главный оркестратор. Планирует, делегирует и управляет задачами.",
     },
 
-    // Architecture and strategy advisor
+    // Oracle: Архитектор и консультант.
+    // Используется для сложных решений и ревью кода.
     "oracle": {
       "model": "openai/gpt-5.2",
-      "description": "Read-only consultation agent. High-IQ reasoning specialist for debugging hard problems and high-difficulty architecture design.",
-      "mode": "subagent",
       "temperature": 0.1,
-      "tools": {
-        "write": false,
-        "edit": false,
-        "task": false,
-      },
     },
 
-    // External docs + OSS reference lookup (cheap via Antigravity)
+    // Librarian: Библиотекарь.
+    // Поиск документации, примеров кода на GitHub и работа с внешними библиотеками.
     "librarian": {
       "model": "google/antigravity-gemini-3-flash",
-      "description": "Specialized codebase understanding agent for multi-repository analysis, searching remote codebases, retrieving official documentation, and finding implementation examples using GitHub CLI, Context7, and Web Search. MUST BE USED when users ask to look up code in remote repositories, explain library internals, or find usage examples in open source.",
-      "mode": "subagent",
-      "temperature": 0.1,
-      "tools": {
-        "write": false,
-        "edit": false,
-        "background_task": false,
-      },
     },
 
-    // Codebase exploration agent (cheap via Antigravity)
+    // Explore: Исследователь кодовой базы.
+    // Быстрый поиск по локальным файлам (grep/glob/ast).
     "explore": {
       "model": "google/antigravity-gemini-3-flash",
-      "description": "Contextual grep for codebases. Answers \"Where is X?\", \"Which file has Y?\", \"Find the code that does Z\". Fire multiple in parallel for broad searches. Specify thoroughness: \"quick\" for basic, \"medium\" for moderate, \"very thorough\" for comprehensive analysis.",
-      "mode": "subagent",
-      "temperature": 0.1,
-      "tools": {
-        "write": false,
-        "edit": false,
-        "task": false,
-        "sisyphus_task": false,
-        "call_omo_agent": false,
-      },
     },
 
-    // Frontend-only visuals (quality via Antigravity Pro)
+    // Frontend UI/UX Engineer: Фронтендер.
+    // Специалист по верстке, CSS, анимациям и React компонентам.
     "frontend-ui-ux-engineer": {
       "model": "google/antigravity-gemini-3-pro-high",
-      "description": "A designer-turned-developer who crafts stunning UI/UX even without design mockups. Code may be a bit messy, but the visual output is always fire.",
-      "mode": "subagent",
     },
 
-    // Documentation specialist (cheap via Antigravity)
+    // Document Writer: Технический писатель.
+    // Создание README, документации API и руководств.
     "document-writer": {
       "model": "google/antigravity-gemini-3-flash",
-      "description": "A technical writer who crafts clear, comprehensive documentation. Specializes in README files, API docs, architecture docs, and user guides. MUST BE USED when executing documentation tasks from ai-todo list plans.",
-      "mode": "subagent",
     },
 
-    // Image/PDF analysis (cheap via Antigravity)
+    // Multimodal Looker: Визуальный аналитик.
+    // Анализ изображений, PDF и скриншотов.
     "multimodal-looker": {
       "model": "google/antigravity-gemini-3-flash",
-      "description": "Analyze media files (PDFs, images, diagrams) that require interpretation beyond raw text. Extracts specific information or summaries from documents, describes visual content. Use when you need analyzed/extracted data rather than literal file contents.",
-      "mode": "subagent",
-      "temperature": 0.1,
-      "tools": {
-        "write": false,
-        "edit": false,
-        "bash": false,
-      },
     },
 
-    // Pre-planning consultant
-    "Metis (Plan Consultant)": {
-      "model": "openai/gpt-5.2",
-      "description": "Pre-planning consultant that analyzes requests to identify hidden intentions, ambiguities, and AI failure points.",
-      "mode": "subagent",
-      "temperature": 0.3,
-    },
+    // Стандартные агенты OpenCode (можно переопределить)
+    "build": { "model": "openai/gpt-5.2" },
+    "plan": { "model": "openai/gpt-5.2" },
 
-    // Plan reviewer
-    "Momus (Plan Reviewer)": {
-      "model": "openai/gpt-5.2",
-      "description": "Expert reviewer for evaluating work plans against rigorous clarity, verifiability, and completeness standards.",
-      "mode": "subagent",
-      "temperature": 0.1,
-    },
-
-    // Category-based task runner (model is inherited from categories)
-    "Sisyphus-Junior": {
-      // "category": "general"
-    },
-
-    // OpenCode internal build/plan agents (leave empty to use OpenCode defaults)
-    "build": {},
-    "plan": {},
-    "OpenCode-Builder": {},
-    "Prometheus (Planner)": {},
+    // Специализированные версии Сизифа
+    "OpenCode-Builder": { "model": "openai/gpt-5.2" },
+    "Planner-Sisyphus": { "model": "openai/gpt-5.2" },
   },
 
-  // Category presets used by sisyphus_task(category=...)
-  "categories": {
-    "visual-engineering": {
-      "model": "google/antigravity-gemini-3-pro-high",
-      "temperature": 0.7,
-    },
-    "ultrabrain": {
-      "model": "openai/gpt-5.2",
-      "temperature": 0.1,
-    },
-    "artistry": {
-      "model": "google/antigravity-gemini-3-pro-high",
-      "temperature": 0.9,
-    },
-    "quick": {
-      "model": "openai/gpt-5.1-codex-mini",
-      "temperature": 0.3,
-    },
-    "most-capable": {
-      "model": "openai/gpt-5.2",
-      "temperature": 0.1,
-    },
-    "writing": {
-      "model": "google/antigravity-gemini-3-flash",
-      "temperature": 0.5,
-    },
-    "general": {
-      "model": "openai/gpt-5.2",
-      "temperature": 0.3,
-    },
-  },
-
-  // Claude Code compatibility toggles (all true by default)
-  "claude_code": {
-    "mcp": true,
-    "commands": true,
-    "skills": true,
-    "agents": true,
-    "hooks": true,
-    "plugins": true,
-    "plugins_override": {},
-  },
-
-  // Orchestrator switches
+  // --------------------------------------------------------------------------------------
+  // КОНФИГУРАЦИЯ СИЗИФА (SISYPHUS ORCHESTRATOR)
+  // Управление поведением главного агента.
+  // --------------------------------------------------------------------------------------
   "sisyphus_agent": {
+    // disabled: Полностью отключить Сизифа и использовать стандартных агентов OpenCode.
     "disabled": false,
+
+    // default_builder_enabled: Включить стандартного агента сборки OpenCode (обычно отключен в пользу Сизифа).
     "default_builder_enabled": false,
+
+    // planner_enabled: Включить агента планирования (Prometheus).
     "planner_enabled": true,
+
+    // replace_plan: Заменить стандартного агента планирования на Prometheus.
     "replace_plan": true,
   },
 
-  // Comment checker configuration
-  "comment_checker": {
-    // "custom_prompt": "<custom warning prompt>"
+  // --------------------------------------------------------------------------------------
+  // ЦИКЛ РАЛЬФА (RALPH LOOP)
+  // Автономный цикл выполнения задач ("работай пока не сделаешь").
+  // Запускается командой /ralph-loop
+  // --------------------------------------------------------------------------------------
+  "ralph_loop": {
+    // enabled: Разрешить использование цикла.
+    "enabled": true,
+
+    // default_max_iterations: Максимальное количество итераций до принудительной остановки.
+    "default_max_iterations": 100,
+
+    // state_dir: Директория для хранения состояния цикла (опционально).
+    // "state_dir": "~/.opencode/ralph-state"
   },
 
-  // Experimental behavior flags
+  // --------------------------------------------------------------------------------------
+  // ФОНОВЫЕ ЗАДАЧИ (BACKGROUND TASKS)
+  // Настройки параллельного выполнения агентов.
+  // --------------------------------------------------------------------------------------
+  "background_task": {
+    // defaultConcurrency: Общее ограничение на количество одновременных задач.
+    "defaultConcurrency": 5,
+
+    // providerConcurrency: Ограничения по провайдерам API.
+    "providerConcurrency": {
+      "anthropic": 3,
+      "openai": 5,
+      "google": 10,
+    },
+
+    // modelConcurrency: Ограничения для конкретных моделей (например, чтобы экономить дорогие токены Opus).
+    "modelConcurrency": {
+      "anthropic/claude-opus-4-5": 2,
+      "google/gemini-3-flash": 10,
+    },
+  },
+
+  // --------------------------------------------------------------------------------------
+  // КАТЕГОРИИ ЗАДАЧ (CATEGORIES)
+  // Пресеты для делегирования задач (инструмент delegate_task).
+  // --------------------------------------------------------------------------------------
+  "categories": {
+    // visual: Для работы с UI/UX. Высокая креативность.
+    "visual": {
+      "model": "google/gemini-3-pro-preview",
+      "temperature": 0.7,
+      "prompt_append": "Focus on modern aesthetics, responsiveness, and clean CSS/Tailwind.",
+    },
+    // business-logic: Для бэкенда и сложной логики. Низкая температура.
+    "business-logic": {
+      "model": "openai/gpt-5.2",
+      "temperature": 0.1,
+      "prompt_append": "Focus on robustness, error handling, and type safety.",
+    },
+  },
+
+  // --------------------------------------------------------------------------------------
+  // СОВМЕСТИМОСТЬ С CLAUDE CODE (CLAUDE CODE COMPATIBILITY)
+  // Поддержка конфигураций и хуков от Claude Code.
+  // --------------------------------------------------------------------------------------
+  "claude_code": {
+    // mcp: Загружать .mcp.json файлы конфигурации.
+    "mcp": true,
+    // commands: Загружать пользовательские команды из .claude/commands.
+    "commands": true,
+    // skills: Загружать навыки из .claude/skills.
+    "skills": true,
+    // agents: Загружать определения агентов из .claude/agents.
+    "agents": true,
+    // hooks: Исполнять хуки из .claude/settings.json.
+    "hooks": true,
+    // plugins: Поддержка плагинов Claude Code.
+    "plugins": true,
+    // plugins_override: Выборочное отключение плагинов.
+    "plugins_override": {
+      // "plugin-name": false
+    },
+  },
+
+  // --------------------------------------------------------------------------------------
+  // GIT MASTER
+  // Настройки навыка работы с Git.
+  // --------------------------------------------------------------------------------------
+  "git_master": {
+    // commit_footer: Добавлять "Ultraworked with Sisyphus" в футер коммитов.
+    "commit_footer": false,
+    // include_co_authored_by: Добавлять "Co-authored-by: Sisyphus" в коммиты.
+    "include_co_authored_by": false,
+  },
+
+  // --------------------------------------------------------------------------------------
+  // ЭКСПЕРИМЕНТАЛЬНЫЕ ФУНКЦИИ (EXPERIMENTAL)
+  // Функции, которые находятся в бета-тестировании.
+  // --------------------------------------------------------------------------------------
   "experimental": {
-    "aggressive_truncation": false,
-    "auto_resume": false,
+    // auto_resume: Автоматически возобновлять сессию после ошибок API или блокировки "думания".
+    "auto_resume": true,
+
+    // aggressive_truncation: Агрессивно обрезать вывод инструментов при нехватке контекста.
+    "aggressive_truncation": true,
+
+    // truncate_all_tool_outputs: Обрезать вывод ВСЕХ инструментов (а не только 'read', 'grep').
+    "truncate_all_tool_outputs": true,
+
+    // preemptive_compaction: Сжимать историю сессии ДО достижения лимита токенов (на 85%).
     "preemptive_compaction": true,
-    "preemptive_compaction_threshold": 0.8,
-    "truncate_all_tool_outputs": false,
-    "dcp_for_compaction": false,
+
+    // Динамическая очистка контекста
     "dynamic_context_pruning": {
-      "enabled": false,
-      "notification": "detailed",
+      "enabled": true,
+      "notification": "detailed", // "off", "minimal", "detailed"
       "turn_protection": {
         "enabled": true,
-        "turns": 3,
-      },
-      "protected_tools": [
-        "task",
-        "todowrite",
-        "todoread",
-        "lsp_rename",
-        "session_read",
-        "session_write",
-        "session_search",
-      ],
-      "strategies": {
-        "deduplication": {
-          "enabled": true,
-        },
-        "supersede_writes": {
-          "enabled": true,
-          "aggressive": false,
-        },
-        "purge_errors": {
-          "enabled": true,
-          "turns": 5,
-        },
+        "turns": 3, // Сколько последних ходов не трогать
       },
     },
   },
 
-  // Auto-update behavior (schema + migrations)
-  "auto_update": true,
+  // --------------------------------------------------------------------------------------
+  // ОТКЛЮЧЕНИЕ ФУНКЦИЙ (DISABLE FEATURES)
+  // Списки для полного отключения определенных возможностей.
+  // --------------------------------------------------------------------------------------
 
-  // Skill loader configuration (empty = defaults)
-  "skills": {
-    "sources": [],
-    "enable": [],
-    "disable": [],
-  },
+  // disabled_mcps: Отключить встроенные MCP серверы.
+  // Доступные: "websearch" (Exa), "context7" (Docs), "grep_app" (GitHub Search)
+  "disabled_mcps": [],
 
-  // Self-referential loop (Ralph)
-  "ralph_loop": {
-    "enabled": false,
-    "default_max_iterations": 100,
-    "state_dir": ".opencode/",
-  },
+  // disabled_skills: Отключить встроенные навыки.
+  // Доступные: "playwright" (браузер), "git-master" (git)
+  "disabled_skills": [],
 
-  // Background agent concurrency controls
-  "background_task": {
-    "defaultConcurrency": 5,
-    "providerConcurrency": {},
-    "modelConcurrency": {},
-  },
+  // disabled_agents: Отключить встроенных агентов.
+  // Доступные: "oracle", "librarian", "explore", "frontend-ui-ux-engineer", ...
+  "disabled_agents": [],
 
-  // Session notification control
-  "notification": {
-    "force_enable": false,
-  },
+  // disabled_hooks: Отключить системные хуки OhMyOpenCode.
+  // Примеры:
+  // "comment-checker" (проверка комментов),
+  // "todo-continuation-enforcer" (принудительное выполнение todo),
+  // "auto-update-checker" (проверка обновлений плагина)
+  "disabled_hooks": [],
 
-  // Git master behavior
-  "git_master": {
-    "commit_footer": true,
-    "include_co_authored_by": true,
+  // --------------------------------------------------------------------------------------
+  // GOOGLE AUTH
+  // Использовать ли встроенную (устаревшую) авторизацию Google.
+  // Рекомендуется использовать плагин opencode-antigravity-auth вместо этого.
+  // --------------------------------------------------------------------------------------
+  "google_auth": false,
+
+  // --------------------------------------------------------------------------------------
+  // LSP (LANGUAGE SERVER PROTOCOL)
+  // Дополнительные настройки LSP серверов (помимо основного конфига opencode.json).
+  // --------------------------------------------------------------------------------------
+  "lsp": {
+    // Пример настройки TypeScript
+    // "typescript-language-server": {
+    //   "command": ["typescript-language-server", "--stdio"],
+    //   "extensions": [".ts", ".tsx"],
+    //   "priority": 10
+    // }
   },
 }
