--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -123,7 +123,8 @@ prepend_fetchers = [
     { mime = "application/msword", run = "office" },
     { name = "*.docx", run = "office" },
     { url = "*.jsonc", run = 'faster-piper -- bat --color=always --style=plain -l json "$1"' },
-    { name = "bun.lock", run = 'faster-piper -- bat --color=always --style=plain -l json "$1"' },
+    { url = "*.lock", run = 'faster-piper -- bat --color=always --style=plain -l json "$1"' },
+
 ]
 spotters = [
   { url = "*/", run = "folder" },
