--- a/opencode/oh-my-opencode.jsonc
+++ b/opencode/oh-my-opencode.jsonc
@@ -57,7 +57,31 @@
 
     // Специализированные версии Сизифа
     "OpenCode-Builder": { "model": "openai/gpt-5.2" },
-    "Planner-Sisyphus": { "model": "openai/gpt-5.2" },
+
+    // ----------------------------------------------------------------
+    // Специализированные агенты планирования (The Planning Trinity)
+    // ----------------------------------------------------------------
+
+    // Prometheus (Planner): Стратег.
+    // Создает детальные планы работы, проводит интервью требований.
+    "Prometheus (Planner)": {
+      "model": "openai/gpt-5.2",
+      "temperature": 0.2,
+    },
+
+    // Metis (Plan Consultant): Консультант.
+    // Анализирует задачу ДО составления плана на предмет рисков и скрытых требований.
+    "Metis (Plan Consultant)": {
+      "model": "openai/gpt-5.2",
+      "temperature": 0.3,
+    },
+
+    // Momus (Plan Reviewer): Рецензент.
+    // Валидирует и проверяет планы на полноту и корректность (High Accuracy Mode).
+    "Momus (Plan Reviewer)": {
+      "model": "openai/gpt-5.2",
+      "temperature": 0.1,
+    },
   },
 
   // --------------------------------------------------------------------------------------
