--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -2,17 +2,17 @@
   "$schema": "https://opencode.ai/config.json",
   "plugin": [
     // Core
-    "oh-my-opencode",
+    "oh-my-opencode@3.0.0-beta.7",
 
     // Auth
-    "opencode-openai-codex-auth",
-    "opencode-antigravity-auth",
+    "opencode-openai-codex-auth@1.3.1",
+    "opencode-antigravity-auth@1.2.8",
 
     // Misc
-    "@plannotator/opencode",
-    "@franlol/opencode-md-table-formatter",
-    "@nick-vi/opencode-type-inject",
-    "@bastiangx/opencode-unmoji",
+    "@plannotator/opencode@0.1.0",
+    "@franlol/opencode-md-table-formatter@1.0.3",
+    "@nick-vi/opencode-type-inject@1.0.3",
+    "@bastiangx/opencode-unmoji@1.0.0",
   ],
   "mcp": {
     "mcpproxy": {
