--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -2,17 +2,17 @@
   "$schema": "https://opencode.ai/config.json",
   "plugin": [
     // Core
-    "oh-my-opencode@3.0.0-beta.7",
+    "oh-my-opencode@3.0.0-beta.8",
 
     // Auth
-    "opencode-openai-codex-auth@1.3.1",
+    "opencode-openai-codex-auth@4.4.0",
     "opencode-antigravity-auth@1.2.8",
 
     // Misc
-    "@plannotator/opencode@0.1.0",
+    "@plannotator/opencode@0.6.4",
     "@franlol/opencode-md-table-formatter@0.0.3",
     "@nick-vi/opencode-type-inject@1.3.1",
-    "@bastiangx/opencode-unmoji@1.0.0",
+    "@bastiangx/opencode-unmoji@0.3.11",
   ],
   "mcp": {
     "mcpproxy": {
@@ -29,7 +29,7 @@
   "tui": {
     "scroll_speed": 1,
     "scroll_acceleration": {
-      "enabled": true,
+      "enabled": false,
     },
   },
   "keybinds": {
