--- a/opencode/oh-my-opencode_glm_free.jsonc
+++ b/opencode/oh-my-opencode_glm_free.jsonc
@@ -9,72 +9,72 @@
     // Sisyphus: Главный оркестратор.
     // Рекомендуется: claude-opus-4-5 (лучший), gpt-5.2 (альтернатива)
     "Sisyphus": {
-      "model": "zai-coding-plan/glm-4.7",
+      "model": "opencode/glm-4.7-free",
       "temperature": 0.1,
       "description": "Главный оркестратор. Планирует, делегирует и управляет задачами.",
     },
 
     // orchestrator-sisyphus: Мастер-оркестратор (TODO loop).
     "orchestrator-sisyphus": {
-      "model": "zai-coding-plan/glm-4.7",
+      "model": "opencode/glm-4.7-free",
       "temperature": 0.1,
     },
 
     // Oracle: Архитектор и консультант.
     // Используется для сложных решений и ревью кода.
     "oracle": {
-      "model": "zai-coding-plan/glm-4.7",
+      "model": "opencode/glm-4.7-free",
       "temperature": 0.1,
     },
 
     // Librarian: Библиотекарь.
     // Поиск документации, примеров кода на GitHub и работа с внешними библиотками.
     "librarian": {
-      "model": "zai-coding-plan/glm-4.5-flash",
+      "model": "opencode/glm-4.7-free",
       "temperature": 0.2,
     },
 
     // Explore: Исследователь кодовой базы.
     // Быстрый поиск по локальным файлам (grep/glob/ast).
     "explore": {
-      "model": "zai-coding-plan/glm-4.5-flash",
+      "model": "opencode/glm-4.7-free",
       "temperature": 0.1,
     },
 
     // Frontend UI/UX Engineer: Фронтендер.
     // Специалист по верстке, CSS, анимациям и React компонентам.
     "frontend-ui-ux-engineer": {
-      "model": "zai-coding-plan/glm-4.7",
+      "model": "opencode/glm-4.7-free",
       "temperature": 0.4,
     },
 
     // Document Writer: Технический писатель.
     // Создание README, документации API и руководств.
     "document-writer": {
-      "model": "zai-coding-plan/glm-4.5-flash",
+      "model": "opencode/glm-4.7-free",
       "temperature": 0.3,
     },
 
     // Multimodal Looker: Визуальный аналитик.
     // Анализ изображений, PDF и скриншотов.
     "multimodal-looker": {
-      "model": "zai-coding-plan/glm-4.5-flash",
+      "model": "opencode/glm-4.7-free",
       "temperature": 0.1,
     },
 
     // Стандартные агенты OpenCode (можно переопределить)
     "build": {
-      "model": "zai-coding-plan/glm-4.7",
+      "model": "opencode/glm-4.7-free",
       "temperature": 0.05,
     },
     "plan": {
-      "model": "zai-coding-plan/glm-4.7",
+      "model": "opencode/glm-4.7-free",
       "temperature": 0.2,
     },
 
     // Специализированные версии Сизифа
     "OpenCode-Builder": {
-      "model": "zai-coding-plan/glm-4.7",
+      "model": "opencode/glm-4.7-free",
       "temperature": 0.05,
     },
 
@@ -85,21 +85,21 @@
     // Prometheus (Planner): Стратег.
     // Создает детальные планы работы, проводит интервью требований.
     "Prometheus (Planner)": {
-      "model": "zai-coding-plan/glm-4.7",
+      "model": "opencode/glm-4.7-free",
       "temperature": 0.2,
     },
 
     // Metis (Plan Consultant): Консультант.
     // Анализирует задачу ДО составления плана на предмет рисков и скрытых требований.
     "Metis (Plan Consultant)": {
-      "model": "zai-coding-plan/glm-4.7",
+      "model": "opencode/glm-4.7-free",
       "temperature": 0.3,
     },
 
     // Momus (Plan Reviewer): Рецензент.
     // Валидирует и проверяет планы на полноту и корректность (High Accuracy Mode).
     "Momus (Plan Reviewer)": {
-      "model": "zai-coding-plan/glm-4.7",
+      "model": "opencode/glm-4.7-free",
       "temperature": 0.1,
     },
   },
@@ -148,13 +148,12 @@
 
     // providerConcurrency: Ограничения по провайдерам API.
     "providerConcurrency": {
-      "zai-coding-plan": 5,
+      "opencode": 5,
     },
 
     // modelConcurrency: Ограничения для конкретных моделей (например, чтобы экономить дорогие токены Opus).
     "modelConcurrency": {
-      "zai-coding-plan/glm-4.7": 3,
-      "zai-coding-plan/glm-4.5-flash": 8,
+      "opencode/glm-4.7-free": 8,
     },
   },
 
@@ -165,14 +164,14 @@
   "categories": {
     // visual: Для работы с UI/UX. Высокая креативность.
     "visual": {
-      "model": "zai-coding-plan/glm-4.7",
+      "model": "opencode/glm-4.7-free",
       "temperature": 0.7,
       "prompt_append": "Focus on modern aesthetics, responsiveness, and clean CSS/Tailwind.",
     },
 
     // business-logic: Для бэкенда и сложной логики. Низкая температура.
     "business-logic": {
-      "model": "zai-coding-plan/glm-4.7",
+      "model": "opencode/glm-4.7-free",
       "temperature": 0.1,
       "prompt_append": "Focus on robustness, error handling, and type safety.",
     },
